export enum Role {
  ADMIN = 1,
  PUBLICADOR = 2,
}
